updated help links to CoGePedia

--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -246,11 +246,12 @@ $(document).ready( function() {
 	 </li>
 	<li><a href='javascript:void(0)'>Help</a>
 	 <ul>
+	      <li><a href="/wiki" target="_blank">CoGePedia</a></li>
 	      <li><a href="./docs/help/<TMPL_VAR NAME=HELP>" target="_blank">Page Docs</a></li>
 	      <li><a href="/CoGe/docs/help/CoGe/Overview.html" target="_blank">About CoGe</a></li>
 	      <li><a href="/CoGe/docs/help/Tutorials/Tutorials.html" target="_blank">Tutorials</a></li>
-	      <li><a href="/CoGe/docs/help/Contact/Contact.html" target="_blank">Contact or Cite Us</a></li>
-	      <li><a href="/CoGe/docs/help/CoGe_System_Support/" target="_blank">System Support and Consulting</a></li>
+	      <li><a href="/wiki/index.php/Contact_Page" target="_blank">Contact or Cite Us</a></li>
+	      <li><a href="/wiki/index.php/System_Support" target="_blank">System Support</a></li>
 	</ul>
 	</li>
 	</ul>
